syntax = "proto3";

package mirero.daq.domain.account.protos.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "daq_common.proto";

option csharp_namespace = "Mirero.DAQ.Domain.Account.Protos.V1";

service SignInService {
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc SignOut(SignOutRequest) returns (google.protobuf.Empty) {}
  rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse) {}
}

message SignInRequest {
  string user_id = 1;
  string password = 2;
  google.protobuf.Duration lifetime = 3;
}

message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp current_date = 3;
}

message SignOutRequest {
  string user_id = 1;
}

message RefreshAccessTokenRequest {
  string refresh_token = 1;
  google.protobuf.Duration lifetime = 2;
}

message RefreshAccessTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp current_date = 3;
}
